tests/files/fail/ResultInvalidSyntax.krna


struct A {
    t: int?string
}